parser.output
Terminals unused in grammar

    AUTO
    CASE
    CONST
    DEFAULT
    DO
    ENUM
    EXTERN
    GOTO
    LONG
    REGISTER
    SHORT
    SIGNED
    SIZEOF
    STATIC
    STRUCT
    SWITCH
    TYPEDEF
    UNION
    UNSIGNED
    VOLATILE
    BITWISE_AND
    BITWISE_OR
    BITWISE_XOR
    BITWISE_NOT
    LEFT_SHIFT
    RIGHT_SHIFT
    PLUS_ASSIGN
    MINUS_ASSIGN
    MULTIPLY_ASSIGN
    DIVIDE_ASSIGN
    MODULO_ASSIGN
    AND_ASSIGN
    OR_ASSIGN
    XOR_ASSIGN
    LEFT_SHIFT_ASSIGN
    RIGHT_SHIFT_ASSIGN
    DOT
    ARROW
    QUESTION
    COLON


Rules useless in parser due to conflicts

   69 primary_expression: IDENTIFIER LPAREN RPAREN
   70                   | IDENTIFIER LPAREN assignment_expression RPAREN


State 21 conflicts: 1 shift/reduce
State 45 conflicts: 1 shift/reduce
State 70 conflicts: 23 shift/reduce
State 75 conflicts: 20 reduce/reduce
State 100 conflicts: 24 shift/reduce
State 106 conflicts: 23 shift/reduce
State 108 conflicts: 20 reduce/reduce
State 135 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: external_declaration
    2        | program external_declaration

    3 external_declaration: function_definition
    4                     | declaration

    5 function_definition: type_specifier IDENTIFIER LPAREN parameter_list RPAREN LBRACE statement_list RBRACE
    6                    | type_specifier IDENTIFIER LPAREN RPAREN LBRACE statement_list RBRACE

    7 declaration: type_specifier IDENTIFIER SEMICOLON
    8            | type_specifier IDENTIFIER ASSIGN expression SEMICOLON

    9 type_specifier: INT
   10               | FLOAT
   11               | DOUBLE
   12               | CHAR
   13               | VOID

   14 parameter_list: parameter
   15               | parameter_list COMMA parameter

   16 parameter: type_specifier IDENTIFIER

   17 statement: expression SEMICOLON
   18          | declaration
   19          | LBRACE statement_list RBRACE
   20          | LBRACE RBRACE
   21          | IF LPAREN expression RPAREN statement
   22          | IF LPAREN expression RPAREN statement ELSE statement
   23          | WHILE LPAREN expression RPAREN statement
   24          | FOR LPAREN expression SEMICOLON expression SEMICOLON expression RPAREN statement
   25          | RETURN expression SEMICOLON
   26          | RETURN SEMICOLON
   27          | BREAK SEMICOLON
   28          | CONTINUE SEMICOLON

   29 statement_list: statement
   30               | statement_list statement
   31               | ε

   32 expression: assignment_expression

   33 assignment_expression: logical_or_expression
   34                      | IDENTIFIER ASSIGN assignment_expression

   35 logical_or_expression: logical_and_expression
   36                      | logical_or_expression OR logical_and_expression

   37 logical_and_expression: equality_expression
   38                       | logical_and_expression AND equality_expression

   39 equality_expression: relational_expression
   40                    | equality_expression EQUAL relational_expression
   41                    | equality_expression NOT_EQUAL relational_expression

   42 relational_expression: additive_expression
   43                      | relational_expression LESS additive_expression
   44                      | relational_expression GREATER additive_expression
   45                      | relational_expression LESS_EQUAL additive_expression
   46                      | relational_expression GREATER_EQUAL additive_expression

   47 additive_expression: multiplicative_expression
   48                    | additive_expression PLUS multiplicative_expression
   49                    | additive_expression MINUS multiplicative_expression

   50 multiplicative_expression: unary_expression
   51                          | multiplicative_expression MULTIPLY unary_expression
   52                          | multiplicative_expression DIVIDE unary_expression
   53                          | multiplicative_expression MODULO unary_expression

   54 unary_expression: postfix_expression
   55                 | PLUS unary_expression
   56                 | MINUS unary_expression
   57                 | NOT unary_expression
   58                 | INCREMENT unary_expression
   59                 | DECREMENT unary_expression

   60 postfix_expression: primary_expression
   61                   | postfix_expression LPAREN RPAREN
   62                   | postfix_expression LPAREN assignment_expression RPAREN
   63                   | IDENTIFIER LPAREN RPAREN
   64                   | IDENTIFIER LPAREN assignment_expression RPAREN
   65                   | postfix_expression LBRACKET expression RBRACKET
   66                   | postfix_expression INCREMENT
   67                   | postfix_expression DECREMENT

   68 primary_expression: IDENTIFIER
   69                   | IDENTIFIER LPAREN RPAREN
   70                   | IDENTIFIER LPAREN assignment_expression RPAREN
   71                   | INTEGER_LITERAL
   72                   | FLOAT_LITERAL
   73                   | STRING_LITERAL
   74                   | CHAR_LITERAL
   75                   | LPAREN expression RPAREN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INTEGER_LITERAL <int_val> (258) 71
    FLOAT_LITERAL <string_val> (259) 72
    STRING_LITERAL <string_val> (260) 73
    CHAR_LITERAL <string_val> (261) 74
    IDENTIFIER <string_val> (262) 5 6 7 8 16 34 63 64 68 69 70
    AUTO <string_val> (263)
    BREAK <string_val> (264) 27
    CASE <string_val> (265)
    CHAR <string_val> (266) 12
    CONST <string_val> (267)
    CONTINUE <string_val> (268) 28
    DEFAULT <string_val> (269)
    DO <string_val> (270)
    DOUBLE <string_val> (271) 11
    ELSE <string_val> (272) 22
    ENUM <string_val> (273)
    EXTERN <string_val> (274)
    FLOAT <string_val> (275) 10
    FOR <string_val> (276) 24
    GOTO <string_val> (277)
    IF <string_val> (278) 21 22
    INT <string_val> (279) 9
    LONG <string_val> (280)
    REGISTER <string_val> (281)
    RETURN <string_val> (282) 25 26
    SHORT <string_val> (283)
    SIGNED <string_val> (284)
    SIZEOF <string_val> (285)
    STATIC <string_val> (286)
    STRUCT <string_val> (287)
    SWITCH <string_val> (288)
    TYPEDEF <string_val> (289)
    UNION <string_val> (290)
    UNSIGNED <string_val> (291)
    VOID <string_val> (292) 13
    VOLATILE <string_val> (293)
    WHILE <string_val> (294) 23
    PLUS <string_val> (295) 48 55
    MINUS <string_val> (296) 49 56
    MULTIPLY <string_val> (297) 51
    DIVIDE <string_val> (298) 52
    MODULO <string_val> (299) 53
    ASSIGN <string_val> (300) 8 34
    EQUAL <string_val> (301) 40
    NOT_EQUAL <string_val> (302) 41
    LESS <string_val> (303) 43
    LESS_EQUAL <string_val> (304) 45
    GREATER <string_val> (305) 44
    GREATER_EQUAL <string_val> (306) 46
    AND <string_val> (307) 38
    OR <string_val> (308) 36
    NOT <string_val> (309) 57
    BITWISE_AND <string_val> (310)
    BITWISE_OR <string_val> (311)
    BITWISE_XOR <string_val> (312)
    BITWISE_NOT <string_val> (313)
    LEFT_SHIFT <string_val> (314)
    RIGHT_SHIFT <string_val> (315)
    INCREMENT <string_val> (316) 58 66
    DECREMENT <string_val> (317) 59 67
    PLUS_ASSIGN <string_val> (318)
    MINUS_ASSIGN <string_val> (319)
    MULTIPLY_ASSIGN <string_val> (320)
    DIVIDE_ASSIGN <string_val> (321)
    MODULO_ASSIGN <string_val> (322)
    AND_ASSIGN <string_val> (323)
    OR_ASSIGN <string_val> (324)
    XOR_ASSIGN <string_val> (325)
    LEFT_SHIFT_ASSIGN <string_val> (326)
    RIGHT_SHIFT_ASSIGN <string_val> (327)
    LPAREN <string_val> (328) 5 6 21 22 23 24 61 62 63 64 69 70 75
    RPAREN <string_val> (329) 5 6 21 22 23 24 61 62 63 64 69 70 75
    LBRACE <string_val> (330) 5 6 19 20
    RBRACE <string_val> (331) 5 6 19 20
    LBRACKET <string_val> (332) 65
    RBRACKET <string_val> (333) 65
    SEMICOLON <string_val> (334) 7 8 17 24 25 26 27 28
    COMMA <string_val> (335) 15
    DOT <string_val> (336)
    ARROW <string_val> (337)
    QUESTION <string_val> (338)
    COLON <string_val> (339)


Nonterminals, with rules where they appear

    $accept (85)
        on left: 0
    program <ast_node> (86)
        on left: 1 2
        on right: 0 2
    external_declaration <ast_node> (87)
        on left: 3 4
        on right: 1 2
    function_definition <ast_node> (88)
        on left: 5 6
        on right: 3
    declaration <ast_node> (89)
        on left: 7 8
        on right: 4 18
    type_specifier <ast_node> (90)
        on left: 9 10 11 12 13
        on right: 5 6 7 8 16
    parameter_list <ast_node> (91)
        on left: 14 15
        on right: 5 15
    parameter <ast_node> (92)
        on left: 16
        on right: 14 15
    statement <ast_node> (93)
        on left: 17 18 19 20 21 22 23 24 25 26 27 28
        on right: 21 22 23 24 29 30
    statement_list <ast_node> (94)
        on left: 29 30 31
        on right: 5 6 19 30
    expression <ast_node> (95)
        on left: 32
        on right: 8 17 21 22 23 24 25 65 75
    assignment_expression <ast_node> (96)
        on left: 33 34
        on right: 32 34 62 64 70
    logical_or_expression <ast_node> (97)
        on left: 35 36
        on right: 33 36
    logical_and_expression <ast_node> (98)
        on left: 37 38
        on right: 35 36 38
    equality_expression <ast_node> (99)
        on left: 39 40 41
        on right: 37 38 40 41
    relational_expression <ast_node> (100)
        on left: 42 43 44 45 46
        on right: 39 40 41 43 44 45 46
    additive_expression <ast_node> (101)
        on left: 47 48 49
        on right: 42 43 44 45 46 48 49
    multiplicative_expression <ast_node> (102)
        on left: 50 51 52 53
        on right: 47 48 49 51 52 53
    unary_expression <ast_node> (103)
        on left: 54 55 56 57 58 59
        on right: 50 51 52 53 55 56 57 58 59
    postfix_expression <ast_node> (104)
        on left: 60 61 62 63 64 65 66 67
        on right: 54 61 62 65 66 67
    primary_expression <ast_node> (105)
        on left: 68 69 70 71 72 73 74 75
        on right: 60


State 0

    0 $accept: • program $end

    CHAR    shift, and go to state 1
    DOUBLE  shift, and go to state 2
    FLOAT   shift, and go to state 3
    INT     shift, and go to state 4
    VOID    shift, and go to state 5

    program               go to state 6
    external_declaration  go to state 7
    function_definition   go to state 8
    declaration           go to state 9
    type_specifier        go to state 10


State 1

   12 type_specifier: CHAR •

    $default  reduce using rule 12 (type_specifier)


State 2

   11 type_specifier: DOUBLE •

    $default  reduce using rule 11 (type_specifier)


State 3

   10 type_specifier: FLOAT •

    $default  reduce using rule 10 (type_specifier)


State 4

    9 type_specifier: INT •

    $default  reduce using rule 9 (type_specifier)


State 5

   13 type_specifier: VOID •

    $default  reduce using rule 13 (type_specifier)


State 6

    0 $accept: program • $end
    2 program: program • external_declaration

    $end    shift, and go to state 11
    CHAR    shift, and go to state 1
    DOUBLE  shift, and go to state 2
    FLOAT   shift, and go to state 3
    INT     shift, and go to state 4
    VOID    shift, and go to state 5

    external_declaration  go to state 12
    function_definition   go to state 8
    declaration           go to state 9
    type_specifier        go to state 10


State 7

    1 program: external_declaration •

    $default  reduce using rule 1 (program)


State 8

    3 external_declaration: function_definition •

    $default  reduce using rule 3 (external_declaration)


State 9

    4 external_declaration: declaration •

    $default  reduce using rule 4 (external_declaration)


State 10

    5 function_definition: type_specifier • IDENTIFIER LPAREN parameter_list RPAREN LBRACE statement_list RBRACE
    6                    | type_specifier • IDENTIFIER LPAREN RPAREN LBRACE statement_list RBRACE
    7 declaration: type_specifier • IDENTIFIER SEMICOLON
    8            | type_specifier • IDENTIFIER ASSIGN expression SEMICOLON

    IDENTIFIER  shift, and go to state 13


State 11

    0 $accept: program $end •

    $default  accept


State 12

    2 program: program external_declaration •

    $default  reduce using rule 2 (program)


State 13

    5 function_definition: type_specifier IDENTIFIER • LPAREN parameter_list RPAREN LBRACE statement_list RBRACE
    6                    | type_specifier IDENTIFIER • LPAREN RPAREN LBRACE statement_list RBRACE
    7 declaration: type_specifier IDENTIFIER • SEMICOLON
    8            | type_specifier IDENTIFIER • ASSIGN expression SEMICOLON

    ASSIGN     shift, and go to state 14
    LPAREN     shift, and go to state 15
    SEMICOLON  shift, and go to state 16


State 14

    8 declaration: type_specifier IDENTIFIER ASSIGN • expression SEMICOLON

    INTEGER_LITERAL  shift, and go to state 17
    FLOAT_LITERAL    shift, and go to state 18
    STRING_LITERAL   shift, and go to state 19
    CHAR_LITERAL     shift, and go to state 20
    IDENTIFIER       shift, and go to state 21
    PLUS             shift, and go to state 22
    MINUS            shift, and go to state 23
    NOT              shift, and go to state 24
    INCREMENT        shift, and go to state 25
    DECREMENT        shift, and go to state 26
    LPAREN           shift, and go to state 27

    expression                 go to state 28
    assignment_expression      go to state 29
    logical_or_expression      go to state 30
    logical_and_expression     go to state 31
    equality_expression        go to state 32
    relational_expression      go to state 33
    additive_expression        go to state 34
    multiplicative_expression  go to state 35
    unary_expression           go to state 36
    postfix_expression         go to state 37
    primary_expression         go to state 38


State 15

    5 function_definition: type_specifier IDENTIFIER LPAREN • parameter_list RPAREN LBRACE statement_list RBRACE
    6                    | type_specifier IDENTIFIER LPAREN • RPAREN LBRACE statement_list RBRACE

    CHAR    shift, and go to state 1
    DOUBLE  shift, and go to state 2
    FLOAT   shift, and go to state 3
    INT     shift, and go to state 4
    VOID    shift, and go to state 5
    RPAREN  shift, and go to state 39

    type_specifier  go to state 40
    parameter_list  go to state 41
    parameter       go to state 42


State 16

    7 declaration: type_specifier IDENTIFIER SEMICOLON •

    $default  reduce using rule 7 (declaration)


State 17

   71 primary_expression: INTEGER_LITERAL •

    $default  reduce using rule 71 (primary_expression)


State 18

   72 primary_expression: FLOAT_LITERAL •

    $default  reduce using rule 72 (primary_expression)


State 19

   73 primary_expression: STRING_LITERAL •

    $default  reduce using rule 73 (primary_expression)


State 20

   74 primary_expression: CHAR_LITERAL •

    $default  reduce using rule 74 (primary_expression)


State 21

   34 assignment_expression: IDENTIFIER • ASSIGN assignment_expression
   63 postfix_expression: IDENTIFIER • LPAREN RPAREN
   64                   | IDENTIFIER • LPAREN assignment_expression RPAREN
   68 primary_expression: IDENTIFIER •
   69                   | IDENTIFIER • LPAREN RPAREN
   70                   | IDENTIFIER • LPAREN assignment_expression RPAREN

    ASSIGN  shift, and go to state 43
    LPAREN  shift, and go to state 44

    LPAREN    [reduce using rule 68 (primary_expression)]
    $default  reduce using rule 68 (primary_expression)


State 22

   55 unary_expression: PLUS • unary_expression

    INTEGER_LITERAL  shift, and go to state 17
    FLOAT_LITERAL    shift, and go to state 18
    STRING_LITERAL   shift, and go to state 19
    CHAR_LITERAL     shift, and go to state 20
    IDENTIFIER       shift, and go to state 45
    PLUS             shift, and go to state 22
    MINUS            shift, and go to state 23
    NOT              shift, and go to state 24
    INCREMENT        shift, and go to state 25
    DECREMENT        shift, and go to state 26
    LPAREN           shift, and go to state 27

    unary_expression    go to state 46
    postfix_expression  go to state 37
    primary_expression  go to state 38


State 23

   56 unary_expression: MINUS • unary_expression

    INTEGER_LITERAL  shift, and go to state 17
    FLOAT_LITERAL    shift, and go to state 18
    STRING_LITERAL   shift, and go to state 19
    CHAR_LITERAL     shift, and go to state 20
    IDENTIFIER       shift, and go to state 45
    PLUS             shift, and go to state 22
    MINUS            shift, and go to state 23
    NOT              shift, and go to state 24
    INCREMENT        shift, and go to state 25
    DECREMENT        shift, and go to state 26
    LPAREN           shift, and go to state 27

    unary_expression    go to state 47
    postfix_expression  go to state 37
    primary_expression  go to state 38


State 24

   57 unary_expression: NOT • unary_expression

    INTEGER_LITERAL  shift, and go to state 17
    FLOAT_LITERAL    shift, and go to state 18
    STRING_LITERAL   shift, and go to state 19
    CHAR_LITERAL     shift, and go to state 20
    IDENTIFIER       shift, and go to state 45
    PLUS             shift, and go to state 22
    MINUS            shift, and go to state 23
    NOT              shift, and go to state 24
    INCREMENT        shift, and go to state 25
    DECREMENT        shift, and go to state 26
    LPAREN           shift, and go to state 27

    unary_expression    go to state 48
    postfix_expression  go to state 37
    primary_expression  go to state 38


State 25

   58 unary_expression: INCREMENT • unary_expression

    INTEGER_LITERAL  shift, and go to state 17
    FLOAT_LITERAL    shift, and go to state 18
    STRING_LITERAL   shift, and go to state 19
    CHAR_LITERAL     shift, and go to state 20
    IDENTIFIER       shift, and go to state 45
    PLUS             shift, and go to state 22
    MINUS            shift, and go to state 23
    NOT              shift, and go to state 24
    INCREMENT        shift, and go to state 25
    DECREMENT        shift, and go to state 26
    LPAREN           shift, and go to state 27

    unary_expression    go to state 49
    postfix_expression  go to state 37
    primary_expression  go to state 38


State 26

   59 unary_expression: DECREMENT • unary_expression

    INTEGER_LITERAL  shift, and go to state 17
    FLOAT_LITERAL    shift, and go to state 18
    STRING_LITERAL   shift, and go to state 19
    CHAR_LITERAL     shift, and go to state 20
    IDENTIFIER       shift, and go to state 45
    PLUS             shift, and go to state 22
    MINUS            shift, and go to state 23
    NOT              shift, and go to state 24
    INCREMENT        shift, and go to state 25
    DECREMENT        shift, and go to state 26
    LPAREN           shift, and go to state 27

    unary_expression    go to state 50
    postfix_expression  go to state 37
    primary_expression  go to state 38


State 27

   75 primary_expression: LPAREN • expression RPAREN

    INTEGER_LITERAL  shift, and go to state 17
    FLOAT_LITERAL    shift, and go to state 18
    STRING_LITERAL   shift, and go to state 19
    CHAR_LITERAL     shift, and go to state 20
    IDENTIFIER       shift, and go to state 21
    PLUS             shift, and go to state 22
    MINUS            shift, and go to state 23
    NOT              shift, and go to state 24
    INCREMENT        shift, and go to state 25
    DECREMENT        shift, and go to state 26
    LPAREN           shift, and go to state 27

    expression                 go to state 51
    assignment_expression      go to state 29
    logical_or_expression      go to state 30
    logical_and_expression     go to state 31
    equality_expression        go to state 32
    relational_expression      go to state 33
    additive_expression        go to state 34
    multiplicative_expression  go to state 35
    unary_expression           go to state 36
    postfix_expression         go to state 37
    primary_expression         go to state 38


State 28

    8 declaration: type_specifier IDENTIFIER ASSIGN expression • SEMICOLON

    SEMICOLON  shift, and go to state 52


State 29

   32 expression: assignment_expression •

    $default  reduce using rule 32 (expression)


State 30

   33 assignment_expression: logical_or_expression •
   36 logical_or_expression: logical_or_expression • OR logical_and_expression

    OR  shift, and go to state 53

    $default  reduce using rule 33 (assignment_expression)


State 31

   35 logical_or_expression: logical_and_expression •
   38 logical_and_expression: logical_and_expression • AND equality_expression

    AND  shift, and go to state 54

    $default  reduce using rule 35 (logical_or_expression)


State 32

   37 logical_and_expression: equality_expression •
   40 equality_expression: equality_expression • EQUAL relational_expression
   41                    | equality_expression • NOT_EQUAL relational_expression

    EQUAL      shift, and go to state 55
    NOT_EQUAL  shift, and go to state 56

    $default  reduce using rule 37 (logical_and_expression)


State 33

   39 equality_expression: relational_expression •
   43 relational_expression: relational_expression • LESS additive_expression
   44                      | relational_expression • GREATER additive_expression
   45                      | relational_expression • LESS_EQUAL additive_expression
   46                      | relational_expression • GREATER_EQUAL additive_expression

    LESS           shift, and go to state 57
    LESS_EQUAL     shift, and go to state 58
    GREATER        shift, and go to state 59
    GREATER_EQUAL  shift, and go to state 60

    $default  reduce using rule 39 (equality_expression)


State 34

   42 relational_expression: additive_expression •
   48 additive_expression: additive_expression • PLUS multiplicative_expression
   49                    | additive_expression • MINUS multiplicative_expression

    PLUS   shift, and go to state 61
    MINUS  shift, and go to state 62

    $default  reduce using rule 42 (relational_expression)


State 35

   47 additive_expression: multiplicative_expression •
   51 multiplicative_expression: multiplicative_expression • MULTIPLY unary_expression
   52                          | multiplicative_expression • DIVIDE unary_expression
   53                          | multiplicative_expression • MODULO unary_expression
